--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ html,body{height:100%;width:100%;font-family:'Inter',system-ui,-apple-system,'Se
   <div class="instr-banner"><div class="instr-badge">ИНСТРУКЦИЯ</div></div>
   <section class="player">
     <video id="promoVideo" poster="video/preview.jpg" muted playsinline preload="metadata" controls>
-      <source src="video/tutor.mp4" type="video/mp4">
+      <source src="tutor.mp4" type="video/mp4">
       Ваш браузер не поддерживает видео.
     </video>
     <div id="videoFallback" class="video-fallback" style="display:none">Видео не найдено. Положите <code>video/tutor.mp4</code> в папку <code>/video</code>.</div>
@@ -127,4 +127,5 @@ setTimeout(()=>ripple.remove(),600);
 })();
 </script>
 </body>
+
 </html>
