--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>LUCKYBEAR — Быстрый вход</title>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
+<link rel="preload" as="video" href="tutor.mp4" type="video/mp4">
+<link rel="preload" as="image" href="preview.jpg">
 <style>
 :root{
 --bg-1:#040408; --bg-2:#0a0c14;
@@ -38,6 +40,9 @@ html,body{height:100%;width:100%;font-family:'Inter',system-ui,-apple-system,'Se
 @keyframes badge-glow{0%{text-shadow:0 0 6px rgba(255,255,255,0.2);}50%{text-shadow:0 0 14px rgba(255,255,255,0.35);}100%{text-shadow:0 0 6px rgba(255,255,255,0.2);}}
 .player{width:100%;max-width:920px;aspect-ratio:16/9;border-radius:16px;overflow:hidden;background:#000;border:1px solid rgba(255,255,255,0.03);margin:18px 0;position:relative;display:flex;align-items:center;justify-content:center;box-shadow:0 10px 30px rgba(0,0,0,0.45);}
 .player video{width:100%;height:100%;object-fit:cover;display:block;background:#000;}
+.video-poster-overlay{position:absolute;inset:0;background:#000 center/cover no-repeat;display:none;align-items:center;justify-content:center;cursor:pointer;}
+.play-icon{width:80px;height:80px;border-radius:50%;background:rgba(255,255,255,0.22);backdrop-filter:blur(4px);display:flex;align-items:center;justify-content:center;box-shadow:0 8px 30px rgba(0,0,0,0.45);}
+.play-icon::before{content:"";width:0;height:0;border-left:22px solid #fff;border-top:14px solid transparent;border-bottom:14px solid transparent;margin-left:6px;}
 .video-fallback{position:absolute;inset:0;display:flex;align-items:center;justify-content:center;text-align:center;padding:12px;color:var(--muted);background:linear-gradient(180deg, rgba(0,0,0,0.45), rgba(0,0,0,0.6));font-size:14px;}
 
 .vpn-warning {
@@ -65,6 +70,11 @@ html,body{height:100%;width:100%;font-family:'Inter',system-ui,-apple-system,'Se
 .badges{display:flex;gap:8px;justify-content:center;margin-top:12px;flex-wrap:wrap;}
 .badge{font-size:12px;padding:6px 8px;border-radius:10px;background:rgba(255,255,255,0.02);border:1px solid rgba(255,255,255,0.03);color:var(--muted);}
 .foot{margin-top:18px;font-size:12px;color:var(--muted);opacity:0.95;}
+ .intro{position:fixed;inset:0;z-index:100;display:flex;flex-direction:column;gap:18px;align-items:center;justify-content:center;background:#000;}
+ .intro.hidden{opacity:0;visibility:hidden;transition:opacity .4s ease;}
+ .loader{width:44px;height:44px;border:3px solid rgba(255,255,255,0.18);border-top-color:#fff;border-radius:50%;animation:spin .8s linear infinite;}
+ @keyframes spin{to{transform:rotate(360deg);}}
+ .brand{width:140px;height:auto;opacity:0.9;}
 </style>
 </head>
 <body>
@@ -84,7 +94,11 @@ html,body{height:100%;width:100%;font-family:'Inter',system-ui,-apple-system,'Se
 <div class="flux"></div>
 <div class="band1"></div>
 <div class="band2"></div>
-<main class="wrap">
+<div id="intro" class="intro">
+  <img class="brand" src="logobear.png" alt="">
+  <div class="loader"></div>
+</div>
+<main class="wrap" style="display:none">
   <div class="casino-logo-large"><img src="logobear.png" alt="LUCKYBEAR логотип"></div>
   <div class="title-wrap">
     <div class="h1">LUCKYBEAR — Войти и играть</div>
@@ -92,11 +106,12 @@ html,body{height:100%;width:100%;font-family:'Inter',system-ui,-apple-system,'Se
   </div>
   <div class="instr-banner"><div class="instr-badge">ИНСТРУКЦИЯ</div></div>
   <section class="player">
-    <video id="promoVideo" poster="video/preview.jpg" muted playsinline preload="metadata" controls>
+    <video id="promoVideo" poster="preview.jpg" muted playsinline preload="auto" controls>
       <source src="tutor.mp4" type="video/mp4">
       Ваш браузер не поддерживает видео.
     </video>
-    <div id="videoFallback" class="video-fallback" style="display:none">Видео не найдено. Положите <code>video/tutor.mp4</code> в папку <code>/video</code>.</div>
+    <div id="videoPoster" class="video-poster-overlay" style="display:none"><div class="play-icon"></div></div>
+    <div id="videoFallback" class="video-fallback" style="display:none">Видео не найдено. Положите <code>tutor.mp4</code> в папку <code>/video</code>.</div>
   </section>
 
   <nav class="vpn-warning">
@@ -104,7 +119,7 @@ html,body{height:100%;width:100%;font-family:'Inter',system-ui,-apple-system,'Se
   </nav>
 
   <nav class="buttons">
-    <a id="tg2" class="cta cta-tg" href="https://t.me/+Sc08yY6CxndkZDAy" target="_blank" rel="noopener noreferrer">
+    <a id="tg2" class="cta cta-tg" href="https://t.me/bearloga365" target="_blank" rel="noopener noreferrer">
       <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="TG">
       TG канал — акции и розыгрыши
     </a>
@@ -120,6 +135,9 @@ html,body{height:100%;width:100%;font-family:'Inter',system-ui,-apple-system,'Se
   </div>
   <div class="foot">© LuckyBear — Все права защищены</div>
 </main>
+<script>
+window.__promoVideoPrefetch=(function(){var u='tutor.mp4';try{fetch(u).then(function(r){if(!r.ok)throw new Error();return r.blob();}).then(function(b){window.__promoVideoBlobURL=URL.createObjectURL(b);}).catch(function(){});}catch(e){}})();
+</script>
 <script>
 (function(){
 const buttons=document.querySelectorAll('.cta');
@@ -138,6 +156,43 @@ setTimeout(()=>ripple.remove(),600);
 });
 });
 })();
+ (function(){
+ var v=document.getElementById('promoVideo');
+ var overlay=document.getElementById('videoPoster');
+ var fallback=document.getElementById('videoFallback');
+ if(!v) return;
+ try{
+   var p=v.getAttribute('poster');
+   if(p){overlay.style.backgroundImage='url('+p+')';overlay.style.display='flex';}
+ }catch(e){}
+ function hideOverlay(){if(overlay) overlay.style.display='none';}
+ if(overlay){overlay.addEventListener('click',function(){try{v.play();hideOverlay();}catch(e){hideOverlay();}});}
+ v.addEventListener('play',hideOverlay);
+ v.addEventListener('error',function(){if(fallback) fallback.style.display='flex';hideOverlay();});
+ var blob=window.__promoVideoBlobURL;
+ if(blob){try{
+   v.removeAttribute('src');
+   var s=v.querySelector('source');
+   if(s) s.remove();
+   v.src=blob;
+   v.preload='auto';
+   v.load();
+ }catch(e){}}
+ })();
+ (function(){
+ var intro=document.getElementById('intro');
+ var wrap=document.querySelector('main.wrap');
+ function reveal(){if(intro){intro.classList.add('hidden');setTimeout(function(){intro.remove();},400);}if(wrap){wrap.style.display='flex';}}
+ var minDelay=600;var start=Date.now();
+ function ready(){return !!window.__promoVideoBlobURL;}
+ function check(){
+   if(ready()||Date.now()-start>2000){
+     var elapsed=Date.now()-start;var remaining=Math.max(0,minDelay-elapsed);
+     setTimeout(reveal,remaining);
+   }else{setTimeout(check,100);} 
+ }
+ if(document.fonts&&document.fonts.ready){document.fonts.ready.then(function(){check();}).catch(function(){check();});}else{check();}
+ })();
 </script>
 </body>
 </html>
